
ORCJAVA-449
===========

  - Replace RXTX library with nrjavaserial library
    (Rainer Hitz)


ORCJAVA-422
===========

  - Manage User Credentials in Controller. This change
    incorporates the equivalent of ORCJAVA-295 fix for
    correctly releasing restlet client resources.
    (Juha Lindfors)


ORCJAVA-411
===========

  - Convert Beehive remote proxy service to blocking I/O
    (Marcus Redeker)


ORCJAVA-425
===========

  - Fix broken changes introduced to test suite in 
    mredeker/Controller_2_0_1_Beehive_Proxy branch, as 
    part of ORCJAVA-424  (Juha Lindfors)


ORCJAVA-424
===========

 - Integrate original NIO-based remote proxy controller side
   components



Controller Pro 1.0.13
=====================
	  
New Features:

  - Updated DSC Security System  to support EnvisaLink and improved current IT100 support
    (Greg Rapp, Phil Taylor, ORCJAVA-302)
  - Update logo to current version (ORCJAVA-429)
  - Update copyright date on home page (ORCJAVA-430)
  - Extend UDP listener to accept event values from a regexp group (ORCJAVA-392)

Bug Fixes:

  - Clean-up testApplicationContext.xml file (ORCJAVA-428)
  - Fixed : NPE while executing a gesture with a command linked to it (ORCJAVA-421)
  - Fixed: RRD4JServlet doesn't set the content-type heading to 'image/png' (ORCJAVA-423)
  - Patch drools for Java 7 support (ORCJAVA-258)


Controller Pro 1.0.12
=====================

Bug Fixes:

  - Update AMX implementation to use locale independent
    string case conversions (ORCJAVA-338)
  - Update Lutron implementation to use locale independent
    string case conversions (ORCJAVA-339)
  - Fixed Marantz protocol does not always re-connect to AVR (ORCJAVA-410)
  - Fix HTTPCommand to avoid Expect_Continue header for POST and PUT requests (ORCJAVA-415)
  - Fixed invalid XML generated for sensor values (ORCJAVA-416)
  - Fixed Marantz protocol takes a long time to connect to receiver (ORCJAVA-418)